[package]
name = "basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "if"
path = "if.rs"

[[bin]]
name = "for"
path = "for.rs"

[[bin]]
name = "while"
path = "while.rs"

[[bin]]
name = "println"
path = "println.rs"

[[bin]]
name = "function"
path = "function.rs"

[[bin]]
name = "sizeof"
path = "sizeof.rs"

[[bin]]
name = "hashset"
path = "hashset.rs"

[[bin]]
name = "hashmap"
path = "hashmap.rs"

[[bin]]
name = "vec"
path = "vec.rs"

[[bin]]
name = "linked_list"
path = "linked_list.rs"
